<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version> <relativePath/>
    </parent>

    <groupId>com.aurora</groupId>
    <artifactId>aurora-commerce</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging> <modules>
    <module>auth-service</module>
    <module>product-service</module>
    <module>order-service</module>
</modules>

    <properties>
        <java.version>17</java.version>
        <!-- Spring Boot 3.4'ün getirdiği 1.20.4, güncel Docker Desktop sürümleriyle
             el sıkışamıyor (API sürüm pazarlığında 400); 1.21.x bunu düzeltir. -->
        <testcontainers.version>1.21.3</testcontainers.version>
    </properties>
</project>